# enterprise-packing-list

./: .gitignore  PORTABLE-README.txt  README.md  RELEASE.md  build-singlefile-webview2.bat  index.html  package-lock.json  package.json  portable-launcher.cmd  release-portable.bat  restart-gui.bat  singlefile-offline-launcher.cmd  singlefile-online-launcher.cmd  vite.config.ts
scripts/: build-singlefile-webview2.ps1
singlefile-launcher/: Cargo.toml  build.rs
singlefile-launcher/src/: main.rs
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  storage_config.rs
src-tauri/src/commands/: company.rs  customer.rs  export.rs  history.rs  inventory.rs  mod.rs  settings.rs  snapshot.rs  storage.rs
src/components/: AppearanceSettings.tsx  CompanyManager.tsx  HistoryList.tsx  PackingListForm.tsx
