[package]
name = "packing-list"
version = "0.1.0"
description = "装箱单生成系统"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
calamine = "0.28"
rusqlite = { version = "0.35", features = ["bundled"] }
base64 = "0.22"
tauri-plugin-shell = "2"
rust_xlsxwriter = "0.81"
